--- a/YabaAndroid/Yaba/src/main/res/layout/activity_main.xml
+++ b/YabaAndroid/Yaba/src/main/res/layout/activity_main.xml
@@ -1,12 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
 
-    <WebView
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</RelativeLayout>
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_viewPager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
