--- a/YabaAndroid/Yaba/src/main/res/layout/activity_proba.xml
+++ b/YabaAndroid/Yaba/src/main/res/layout/activity_proba.xml
@@ -4,9 +4,11 @@
                 android:layout_height="match_parent"
                 tools:context=".MainActivity">
 
-    <WebView
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <Button
+        android:layout_centerInParent="true"
+        android:id="@+id/button"
+        android:text="HOLA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
