Finished network module. Full error control still not done.

--- a/YabaAndroid/Yaba/src/main/res/layout/activity_proba.xml
+++ b/YabaAndroid/Yaba/src/main/res/layout/activity_proba.xml
@@ -4,10 +4,8 @@
                 android:layout_height="match_parent"
                 tools:context=".MainActivity">
 
-    <Button
-        android:layout_centerInParent="true"
-        android:id="@+id/button"
-        android:text="HOLA"
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
