--- a/YabaAndroid/Yaba/src/main/res/layout/lines_fragment.xml
+++ b/YabaAndroid/Yaba/src/main/res/layout/lines_fragment.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical">
 
     <com.astuetz.viewpager.extensions.PagerSlidingTabStrip
-        android:id="@+id/main_tabStrip"
+        android:id="@+id/lines_tabStrip"
         android:layout_width="match_parent"
         android:layout_height="48dip"
         android:background="@drawable/background_tab" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/main_viewPager"
+        android:id="@+id/lines_viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
