--- a/YabaAndroid/Yaba/src/main/res/values/arrays.xml
+++ b/YabaAndroid/Yaba/src/main/res/values/arrays.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="tab_titles">
+    <string-array name="lines_tab_titles">
+        <item>Diurnos</item>
+        <item>Nocturnos</item>
+        <item>Universitarios</item>
+    </string-array>
+    <string-array name="drawer_sections">
+        <item>Favoritos</item>
         <item>Líneas</item>
-        <item>Buscar parada</item>
+        <item>Mapa</item>
+        <item>Abono</item>
     </string-array>
 </resources>
