--- a/YabaAndroid/Yaba/src/main/res/layout/main_activity.xml
+++ b/YabaAndroid/Yaba/src/main/res/layout/main_activity.xml
@@ -24,7 +24,7 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#DADADA"
+        android:background="#222222"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp" />
 
