--- a/YabaAndroid/Yaba/src/main/res/values/styles.xml
+++ b/YabaAndroid/Yaba/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="@android:style/Theme.Holo.Light">
+    <style name="AppBaseTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -17,6 +17,9 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
-    <style name="activated" parent="AppBaseTheme"/>
+    <!--Theme for drawer layout list checked-->
+    <style name="DrawerItemChecked" parent="AppBaseTheme">
+        <item name="android:background">@drawable/selector_drawer_layout</item>
+    </style>
 
 </resources>
