Added NfcScanActivity to test beam.

--- a/YabaAndroid/Yaba/src/main/res/menu/main.xml
+++ b/YabaAndroid/Yaba/src/main/res/menu/main.xml
@@ -4,6 +4,9 @@
         android:title="@string/action_search"
         android:icon="@android:drawable/ic_menu_search"
         android:showAsAction="always" />
+    <item android:id="@+id/action_nfc_scan"
+        android:title="@string/action_nfc_scan"
+        android:showAsAction="never" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
