Fixed issue with ActionBar title in MainActivity. Added SettingsActivity.

--- a/YabaAndroid/Yaba/src/main/res/values/arrays.xml
+++ b/YabaAndroid/Yaba/src/main/res/values/arrays.xml
@@ -8,6 +8,7 @@
     <string-array name="drawer_sections">
         <item>Favoritos</item>
         <item>Líneas</item>
+        <item>Alertas</item>
         <item>Mapa</item>
         <item>Abono</item>
     </string-array>
