--- a/YabaAndroid/Yaba/src/main/res/values/styles.xml
+++ b/YabaAndroid/Yaba/src/main/res/values/styles.xml
@@ -22,4 +22,14 @@
         <item name="android:background">@drawable/selector_drawer_layout</item>
     </style>
 
+    <!--Transparent theme-->
+    <style name="Theme.Transparent" parent="android:Theme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
 </resources>
