--- a/YabaAndroid/Yaba/src/main/res/xml/settings.xml
+++ b/YabaAndroid/Yaba/src/main/res/xml/settings.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <PreferenceCategory
+        android:summary="@string/developer"
+        android:title="@string/developer">
+        <Preference
+            android:key="open_source_licenses"
+            android:title="@string/open_source_licenses" />
+        <Preference
+            android:key="yaba_version"
+            android:title="@string/yaba_version" />
+    </PreferenceCategory>
 </PreferenceScreen>
