--- a/YabaAndroid/Yaba/src/main/res/layout/list_item_line.xml
+++ b/YabaAndroid/Yaba/src/main/res/layout/list_item_line.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:textColor="@color/textcolor_selector_black"
+        android:textColor="@android:color/black"
         android:textAppearance="?android:attr/textAppearanceMediumInverse"/>
 
     <TextView
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:textColor="@color/textcolor_selector_black"
+        android:textColor="@android:color/black"
         android:textAppearance="?android:attr/textAppearanceSmallInverse" />
 
 </LinearLayout>
