--- a/YabaAndroid/Yaba/src/main/res/layout/activity_proba.xml
+++ b/YabaAndroid/Yaba/src/main/res/layout/activity_proba.xml
@@ -1,12 +1,19 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:orientation="vertical"
+              android:layout_height="match_parent"
+              tools:context=".MainActivity">
+
+    <Button
+        android:text="do things"
+        android:id="@+id/button"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"/>
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+</LinearLayout>
