Fixed main_activity layout, removed unused container view.

--- a/YabaAndroid/Yaba/src/main/res/layout/ad_fragment_layout.xml
+++ b/YabaAndroid/Yaba/src/main/res/layout/ad_fragment_layout.xml
@@ -2,7 +2,7 @@
                        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
                        android:id="@+id/ad"
                        android:layout_gravity="center"
-                       android:layout_width="match_parent"
+                       android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        googleads:adSize="BANNER"
                        googleads:testDevices="@string/testDevice"
