--- a/YabaAndroid/Yaba/src/main/res/layout/main_activity.xml
+++ b/YabaAndroid/Yaba/src/main/res/layout/main_activity.xml
@@ -9,16 +9,14 @@
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/container"
+        <com.pilasvacias.yaba.core.drawer.DrawerViewPager
+            android:id="@+id/main_viewPager"
             android:layout_width="match_parent"
-            android:orientation="vertical"
             android:layout_height="0dp"
             android:layout_weight="1"/>
 
@@ -27,14 +25,9 @@
             android:layout_gravity="center"
             android:orientation="vertical"
             android:layout_height="50dp"
-            android:layout_width="match_parent"/>
+            android:layout_width="wrap_content"/>
 
     </LinearLayout>
-
-    <com.pilasvacias.yaba.core.drawer.DrawerViewPager
-        android:id="@+id/main_viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
     <ListView
         android:id="@+id/drawer_listView"
